<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Campanion</string>
    <string name="hello_world">Hello world!</string>
    <string name="switch_button_text">Switch</string>
    <string name="shutter_button_text">Shutter</string>
    <string name="stability_button_text">Stabilize</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_preview">Preview</string>
    <string name="import_fail">Import failed</string>
    <string name="delete_fail">Delete failed</string>
    <string name="loading">Loading…</string>
    <string name="loading_fail">Error</string>
    <string name="edit_button_text">Edit</string>
    <string name="share_button_text">Share</string>
    <string name="delete_button_text">Delete</string>
    <string name="deselect_button_text">Deselect</string>
    <string name="title_activity_edit">Edit</string>
    <string name="delete_question">Are you sure you want to delete selected files?</string>

</resources>
