<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.strlght.campanion.app.activity.GalleryActivity">

    <item
        android:id="@+id/action_edit"
        android:enabled="false"
        android:icon="@drawable/selector_edit"
        android:showAsAction="ifRoom"
        android:title="@string/edit_button_text" />
    <item
        android:id="@+id/action_share"
        android:enabled="false"
        android:icon="@drawable/selector_share"
        android:showAsAction="ifRoom"
        android:title="@string/share_button_text" />
    <item
        android:id="@+id/action_delete"
        android:enabled="false"
        android:icon="@drawable/selector_delete"
        android:showAsAction="ifRoom"
        android:title="@string/delete_button_text" />
    <item
        android:id="@+id/action_deselect"
        android:enabled="false"
        android:icon="@drawable/selector_deselect"
        android:showAsAction="ifRoom"
        android:title="@string/deselect_button_text" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />

</menu>
