<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.strlght.campanion.app.activity.PreviewActivity">

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="ifRoom"
        android:title="@string/edit_button_text" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="ifRoom"
        android:title="@string/share_button_text" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_discard"
        android:showAsAction="ifRoom"
        android:title="@string/delete_button_text" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />
</menu>
